--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Tobenna Tonywilson Iloabuchi <tobexint@gmail.com>
+Mavel Portia Antwi <meyvel22@gmail.com>
